# plutus-pioneer-program

code/week01/: cabal.project  plutus-pioneer-program-week01.cabal
code/week01/app/: auction-bid.hs  auction-host.hs  auction-pab.hs
code/week01/artifacts/: currency.txt  wallet-1.cid  wallet-2.cid  wallet-3.cid  wallet-4.cid
code/week01/src/Week01/: EnglishAuction.hs  PAB.hs
code/week01/tests/: Spec.hs
code/week01/tests/Spec/: Model.hs  Trace.hs
code/week02/: plutus-pioneer-program-week02.cabal
code/week02/src/Week02/: Homework1.hs  Homework2.hs
code/week02/tests/: Spec.hs
code/week02/tests/Spec/: Burn.hs  FortyTwo.hs  Homework.hs
code/week02/tests/Spec/FortyTwo/: Model.hs  Trace.hs
code/week02/tests/Spec/Homework/: One.hs  Two.hs
code/week03/: cabal.project  plutus-pioneer-program-week03.cabal
code/week03/app/: vesting-pab.hs
code/week03/src/Week03/: Homework1.hs  Homework2.hs  PAB.hs
code/week03/tests/: Spec.hs
code/week03/tests/Spec/Homework1/: Trace.hs
code/week03/tests/Spec/Homework2/: Trace.hs
code/week03/tests/Spec/Parameterized/: Trace.hs
code/week03/tests/Spec/Vesting/: Trace.hs
