Cabal-Version:      2.4
Name:               plutus-pioneer-program-week01
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week01.EnglishAuction
                       Week01.PAB
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx-plugin
                     , plutus-tx
                     , recursion-schemes
                     , text
                     , freer-extras
                     , data-default
                     , prettyprinter
                  , uuid
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
                       -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                       -Wno-missing-import-lists -Wredundant-constraints

executable auction-pab
  main-is: auction-pab.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:    aeson
                  , base ^>= 4.14.1.0
                  , freer-extras
                  , freer-simple
                  , plutus-contract
                  , plutus-ledger
                  , plutus-ledger-api
                  , plutus-pab
                  , plutus-pioneer-program-week01
                  , text
                  , plutus-use-cases

executable auction-host
  main-is: auction-host.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:    aeson
                  , base ^>= 4.14.1.0
                  , plutus-pioneer-program-week01
                  , text
                  , req
                  , directory
                  , uuid
                  , optparse-generic
                  , bytestring
                  , plutus-ledger
                  , plutus-ledger-api
                  , plutus-pab
                  , mtl
                  , transformers
                  , stm
                  , websockets

executable auction-bid
  main-is: auction-bid.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:    aeson
                  , base ^>= 4.14.1.0
                  , plutus-pioneer-program-week01
                  , text
                  , req
                  , directory
                  , uuid
                  , optparse-generic
                  , bytestring
                  , plutus-ledger
                  , plutus-pab
                  , mtl
                  , transformers

test-suite plutus-pioneer-program-week01-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Spec.Model
                 Spec.Trace
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:   base ^>=4.14.1.0
                 , containers
                 , data-default
                 , freer-extras
                 , lens
                 , plutus-contract
                 , plutus-ledger
                 , plutus-pioneer-program-week01
                 , plutus-tx
                 , QuickCheck
                 , tasty
                 , tasty-quickcheck
                 , text
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
