Cabal-Version:      2.4
Name:               plutus-pioneer-program-week03
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week03.Homework1
                     , Week03.Homework2
                     , Week03.Parameterized
                     , Week03.Solution1
                     , Week03.Solution2
                     , Week03.Vesting
                     , Week03.PAB
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , prettyprinter
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , uuid
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable vesting-pab
  main-is: vesting-pab.hs
  hs-source-dirs: app
  build-depends:       base ^>= 4.14.1.0
                     , plutus-pioneer-program-week03
                     , plutus-contract
                     , plutus-pab
                     , plutus-ledger
                     , aeson
                     , bytestring
                     , data-default
                     , directory
                     , freer-simple
                     , freer-extras
                     , text

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NumericUnderscores
  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

test-suite plutus-pioneer-program-week03-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: tests
  build-depends:       base ^>= 4.14.1.0
                     , data-default
                     , containers
                     , lens
                     , text
                     , plutus-contract
                     , plutus-ledger
                     , tasty
                     , tasty-quickcheck
                     , plutus-pioneer-program-week03
  other-modules:   Spec.Homework1.Trace
                 , Spec.Homework2.Trace
                 , Spec.Parameterized.Trace
                 , Spec.Vesting.Trace
  default-language: Haskell2010
  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas


